renamed for easier wsgi support

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/menubar.css') }}">
 </head>
 <body style="margin: 0; padding: 0;">
+
   <div id="menubar">
 
     <div id="menubar_left">
@@ -19,7 +20,7 @@
 
     <div id="menubar_right">
             <div class="menubar_username_div">
-                <a href="/login">Username</a>
+                <a href="/login">Login</a>
             </div>
             <div class="menubar_username_div">
                 <p>Balance</p>
