--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <form action="/login" method="post">
-        <label for="email">Email</label>
-        <input id="email" type="text" name="email"/>
+        <label for="username">Username</label>
+        <input id="username" type="text" name="username"/>
         <label for="password">Password</label>
         <input id="password" type="text" name="password"/>
         <input type="submit"/>
