added user creation and login with database

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/menubar.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "/static/styles/menubar.css">
 </head>
 <body style="margin: 0; padding: 0;">
 
@@ -11,10 +11,10 @@
 
     <div id="menubar_left">
         <div class="menubar_icon_div">
-          <img class="menubar_icon" src="{{ url_for('static', filename='images/nav.png') }}"/>
+          <img class="menubar_icon" src="/static/images/nav.png"/>
         </div>
         <div class="menubar_icon_div">
-          <img class="menubar_icon" src="{{ url_for('static', filename='images/home.png') }}"/>
+          <img class="menubar_icon" src="/static/images/home.png"/>
         </div>
     </div>
 
