registration link on login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,5 +12,6 @@
         <input id="password" type="text" name="password"/>
         <input type="submit"/>
     </form>
+    <p>Don't have an account? <a href="/register">Click here</a></p>
 </body>
 </html>
