add coinflip improve user managment

--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -2,7 +2,9 @@
 
     <div id="menubar_left">
         <div class="menubar_icon_div">
-          <img class="menubar_icon" src="/static/images/home.png"/>
+            <a href="/">
+                <img class="menubar_icon" src="/static/images/home.png"/>
+            </a>
         </div>
     </div>
 
