--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="{{ url_for('static/styles', filename='menubar.css') }}">
+
 <div id="menubar">
 
     <div id="menubar_left">
