--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static/styles', filename='menubar.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/menubar.css') }}">
 
 <div id="menubar">
 
