--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -8,5 +8,10 @@
 
 {% include "menubar.html" %}
 
+<div>
+    <p id="result"></p>
+    <button id="flip">Flip coin</button>
+</div>
+
 </body>
 </html>
