--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="static/styles/menubar.css">
+<link rel="stylesheet" href="/static/styles/menubar.css">
 
 <div id="menubar">
 
