creating coinflip game

--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Coinflip</title>
+    <script type="text/javascript" src="/static/scripts/coinflip.js"></script>
 </head>
 <body style="margin: 0; padding: 0;">
 
