--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -15,12 +15,12 @@
         </label>
 
         <label>
-            <input type="radio" value="head" name="choice" checked="checked">
+            <input type="radio" value="head" id="head" name="choice" checked="checked">
             Head
         </label>
 
         <label>
-            <input type="radio" value="tail" name="choice">
+            <input type="radio" value="tail" id="tail" name="choice">
             Tail
         </label>
 
