--- a/templates/account.html
+++ b/templates/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Account</title>
 </head>
-<body>
+<body style="margin: 0; padding: 0;">
 
     {% include "menubar.html" %}
 
