adding stylesheet for BlackJack

--- a/templates/black_jack.html
+++ b/templates/black_jack.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>BlackJack</title>
+        <link rel="stylesheet" href="/static/styles/black_jack.css">
     </head>
 
     <body>
@@ -15,7 +16,7 @@
             <br>
             <h2>Dealer: <span id="sumDealer"></span></h2>
             <div id="cardsDealer">
-                <img id="hiddenCard" src="/static/images/cardDeckBlackJack/Rueckseite.svg" alt="Backside">
+                <img id="hiddenCard" src="/static/images/card_deck_black_jack/back.svg" alt="Backside">
             </div>
             <br>
             <h2>You: <span id="sumPlayer"></span></h2>
