Adding link to BlackJack

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
 <p>Roulette</p>
 <p>Crash</p>
-<p>BlackJack</p>
+<a href="/black_jack">BlackJack</a>
 <a href="/coinflip">Coinflip</a>
 
 </body>
