added menubar to register and login

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
-<body>
+<body style="margin: 0; padding: 0;">
+
+    {% include 'menubar.html' %}
+
     <form action="/register" method="post">
         <label for="username">Username</label>
         <input id="username" type="text" name="username"/>
