--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link rel="stylesheet" href="/static/styles/register.css">
 </head>
 <body style="margin: 0; padding: 0;">
 
