updated register style

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="/static/styles/login.css">
+    <link rel="stylesheet" href="/static/styles/login_register.css">
 </head>
 <body style="margin: 0; padding: 0;">
 
@@ -22,9 +22,10 @@
             </div>
         </form>
 
-        <div id="register-div">
-            <a id="register" href="/register">Create new account</a>
+        <div id="other-method-div">
+            <a id="other-method" href="/register">Create new account</a>
         </div>
     </div>
+
 </body>
 </html>
