--- a/static/styles/login_register.css
+++ b/static/styles/login_register.css
@@ -32,10 +32,7 @@ input[type=submit] {
     width: 40%;
 }
 
-#register-div {
-}
-
-#register {
+#other-method {
 	font-family: Arial, Helvetica, sans-serif;
     color: black;
     text-decoration: none;
