--- a/templates/errorpage.html
+++ b/templates/errorpage.html
@@ -8,7 +8,7 @@
 
 <p style="color: red">{{ error }}</p>
 <a style="font-family: Arial, Helvetica, sans-serif; color: black; text-decoration: none; border: none;
-border-radius: 5px; font-size: 13px; background-color: #b7d6f3; padding: 0.5%;" href="{{ redirect }}">Try again</a>'
+border-radius: 5px; font-size: 13px; background-color: #b7d6f3; padding: 0.5%;" href="{{ redirect }}">Try again</a>
 
 </body>
 </html>
