--- a/static/styles/login_register.css
+++ b/static/styles/login_register.css
@@ -29,7 +29,7 @@ input[type=submit] {
     border: none;
     border-radius: 5px;
     font-size: 18px;
-    width: 40%;
+    width: fit-content;
 }
 
 #other-method {
