trying to fix cookie not actually being deleted

--- a/templates/account.html
+++ b/templates/account.html
@@ -8,7 +8,7 @@
 
     {% include "menubar.html" %}
 
-    <a href="/logout">Log out</a>
+    <button id="logout">Log out</button>
 
 </body>
 </html>
