trying to fix cookie not actually being deleted

--- a/templates/account.html
+++ b/templates/account.html
@@ -10,5 +10,6 @@
 
     <button id="logout">Log out</button>
 
+    <script type="text/javascript" src="/static/scripts/account.js"></script>
 </body>
 </html>
