change cursor to pointer when hovering buttons

--- a/static/styles/login_register.css
+++ b/static/styles/login_register.css
@@ -42,3 +42,8 @@ input[type=submit] {
     background-color: #b7d6f3;
     padding: 0.5%;
 }
+
+#other-method:hover,
+input[type=submit]:hover {
+    cursor: pointer;
+}
