--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -27,12 +27,12 @@
         </div>
 
         <label class="choice-radio-label">
-            <input type="radio" value="head" id="head" name="choice" checked="checked">
+            <input class="choice-radio-button" type="radio" value="head" id="head" name="choice" checked="checked">
             Head
         </label>
 
         <label class="choice-radio-label">
-            <input type="radio" value="tail" id="tail" name="choice">
+            <input class="choice-radio-button" type="radio" value="tail" id="tail" name="choice">
             Tail
         </label>
 
