--- a/static/styles/coinflip.css
+++ b/static/styles/coinflip.css
@@ -12,10 +12,6 @@ body {
     width: fit-content;
 }
 
-#flip:hover {
-    cursor: pointer;
-}
-
 #bet {
     border: none;
     border-bottom: 2px solid #8FB8DE;
@@ -46,4 +42,10 @@ body {
 
 .choice-radio-label {
     font-size: 18px;
+}
+
+.choice-radio-button,
+#flip:hover,
+.input-number-button:hover {
+    cursor: pointer;
 }
