--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
 {% include 'menubar.html' %}
 
-<p>Roulette</p>
+<a href="/roulette">Roulette</a>
 <p>Crash</p>
 <a href="/black_jack">BlackJack</a>
 <a href="/coinflip">Coinflip</a>
