--- a/templates/black_jack.html
+++ b/templates/black_jack.html
@@ -29,7 +29,7 @@
         <footer>
 
         </footer>
-    <script src="/scripts/black_jack.js"></script>
+    <script type="text/javascript" src="/static/scripts/black_jack.js"></script>
     </body>
 
     </html>
