--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -10,9 +10,9 @@
 
 <p>Roulette</p>
 <p>Crash</p>
-<a href="/black_jack">BlackJack</a>
-<br>
-<a href="/coinflip">Coinflip</a>
+<p><a href="/black_jack">BlackJack</a></p>
+
+<p><a href="/coinflip">Coinflip</a></p>
 
 </body>
 </html>
