--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -5,7 +5,7 @@
     <title>Coinflip</title>
     <link rel="stylesheet" href="/static/styles/coinflip.css">
 </head>
-<body style="margin: 0; padding: 0;">
+<body>
 
     {% include "menubar.html" %}
 
