fix + add half animation

--- a/static/styles/roulette.css
+++ b/static/styles/roulette.css
@@ -54,3 +54,16 @@ body {
 .input-number-button:hover {
     cursor: pointer;
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinning {
+  animation: spin 2s linear infinite;
+}
