Adding function that a little BlackJack is running. Not possible to make stakes right now.

--- a/templates/black_jack.html
+++ b/templates/black_jack.html
@@ -25,6 +25,7 @@
             <br>
             <button id="hit">Hit</button>
             <button id="stay">Stay</button>
+            <p id="result"></p>
         </main>
         <footer>
 
