--- a/templates/roulette/roulette.html
+++ b/templates/roulette/roulette.html
@@ -12,6 +12,10 @@
         <img alt="Wheel" id="wheel_img" src="/static/images/roulette/roulette_wheel.svg">
     </div>
 
+    <div>
+        <img alt="Ball" id="ball_img" src="/static/images/roulette/roulette_ball.png">
+    </div>
+
     <div id="bet-div">
             <label for="bet" style="font-size: 18px">
                 Bet:
@@ -38,7 +42,7 @@
             Black
         </label>
 
-        <button id="spin">Spin coin</button>
+        <button id="spin">Spin wheel</button>
 
 <script type="text/javascript" src="/static/scripts/roulette.js"></script>
 </body>
