--- a/templates/roulette/roulette.html
+++ b/templates/roulette/roulette.html
@@ -8,11 +8,8 @@
 <body>
     {% include "menubar.html" %}
 
-    <div>
+    <div class="roulette">
         <img alt="Wheel" id="wheel_img" src="/static/images/roulette/roulette_wheel.svg">
-    </div>
-
-    <div>
         <img alt="Ball" id="ball_img" src="/static/images/roulette/roulette_ball.png">
     </div>
 
