--- a/static/styles/roulette.css
+++ b/static/styles/roulette.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .roulette {
@@ -8,6 +10,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 #wheel_img {
@@ -24,6 +27,10 @@ body {
     height: 7%;
 }
 
+#menubar, #input-container, #bet-type, #bet-div, #spin {
+    position: relative;
+    z-index: 2;
+}
 #bet-type {
     font-size: 18px;
     border: 2px solid #8FB8DE;
@@ -34,6 +41,7 @@ body {
     width: fit-content;
     cursor: pointer;
     outline: none;
+    margin-right: 5%;
 }
 
 #bet-type {
