--- a/templates/roulette/roulette.html
+++ b/templates/roulette/roulette.html
@@ -6,26 +6,31 @@
     <link rel="stylesheet" href="/static/styles/roulette.css">
 </head>
 <body>
+<!-- Menu bar included from another HTML file for consistent navigation -->
 <div id="menubar">
-{% include "menubar.html" %}
+    {% include "menubar.html" %}
 </div>
 
+<!-- Main roulette game container -->
 <div class="roulette">
     <img alt="Wheel" id="wheel_img" src="/static/images/roulette/roulette_wheel.svg">
     <img alt="Ball" id="ball_img" src="/static/images/roulette/roulette_ball.png">
 </div>
 
+<!-- Betting amount input section -->
 <div id="bet-div">
     <label for="bet" style="font-size: 18px">
         Bet Coins:
     </label>
     <div style="display: inline">
-
+        <!-- Decrease bet amount button -->
         <button type="button" class="input-number-button"
                 onclick="this.parentNode.querySelector('[type=number]').stepDown();">
             -
         </button>
+        <!-- Input field for bet amount -->
         <input id="bet" type="number" value="10"/>
+        <!-- Increase bet amount button -->
         <button type="button" class="input-number-button"
                 onclick="this.parentNode.querySelector('[type=number]').stepUp();">
             +
@@ -33,6 +38,7 @@
     </div>
 </div>
 
+<!-- Betting type selection dropdown -->
 <label for="bet-type" style="font-size: 18px">
     Bet Type:
 </label>
@@ -40,11 +46,12 @@
     <option value="number">Single Number</option>
     <option value="color">Color</option>
     <option value="evenodd">Even/Odd</option>
-    <!-- Add other betting options here -->
 </select>
 
+<!-- Container for dynamically changing input fields based on selected bet type -->
 <div id="input-container"></div>
 
+<!-- Button to initiate the roulette wheel spin -->
 <button id="spin">Spin wheel</button>
 
 <script type="text/javascript" src="/static/scripts/roulette.js"></script>
