Add start and Play Again button in HTML

--- a/templates/black_jack.html
+++ b/templates/black_jack.html
@@ -23,8 +23,10 @@
             <div id="cardsPlayer">
             </div>
             <br>
+            <button id="start">Start</button>
             <button id="hit">Hit</button>
             <button id="stay">Stay</button>
+            <button id="restart">PlayAgain</button>
             <p id="result"></p>
         </main>
         <footer>
