--- a/templates/black_jack/black_jack.html
+++ b/templates/black_jack/black_jack.html
@@ -37,7 +37,7 @@
             <button id="hit">Hit</button>
             <button id="stay">Stay</button>
             <button id="restart">PlayAgain</button>
-            <p id="result"></p>
+            <div id="result"></div>
         </main>
         <footer>
 
