--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
 <p>Crash</p>
 <a href="/black_jack">BlackJack</a>
 <a href="/coinflip">Coinflip</a>
+<a href="/minesweeper">Minesweeper</a>
 
 </body>
 </html>
