--- a/templates/minesweeper/minesweeper.html
+++ b/templates/minesweeper/minesweeper.html
@@ -11,8 +11,16 @@
         <div class="grid-container" id="grid-container">
             <!-- Buttons mit Nummern 1 bis 25 werden hier von JavaScript eingefügt -->
         </div>
-        <div>
-            <h1>Test</h1>
+        <div id="controls">
+        </div>
+        <div class="bet-area">
+            <input id="betValue" type="number" value="10"/>
+            <input id="mineCount" type="number" value="5"/>
+            <button id="betButton">Place Bet</button>
+        </div>
+        <div class="cash-out-area">
+            <label id="cashOutValue">0</label>
+            <button id="cashOutButton">Cash out</button>
         </div>
         <script type="text/javascript" src="/static/scripts/minesweeperFrontEnd.js"></script>
     </body>
