--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
 
 {% include 'menubar.html' %}
 
+<a href="/account">Account</a>
 <a href="/roulette">Roulette</a>
 <a href="/black_jack">BlackJack</a>
 <a href="/coinflip">Coinflip</a>
