fixed some small bugs

--- a/templates/minesweeper/minesweeper.html
+++ b/templates/minesweeper/minesweeper.html
@@ -14,12 +14,21 @@
         <div id="controls">
         </div>
         <div class="bet-area">
-            <input id="betValue" type="number" value="10"/>
-            <input id="mineCount" type="number" value="5"/>
+            <label>
+                Bet amount:
+                <input id="betValue" type="number" value="10"/>
+            </label>
+            <label>
+                Mine count:
+                <input id="mineCount" type="number" value="5"/>
+            </label>
             <button id="betButton">Place Bet</button>
         </div>
         <div class="cash-out-area">
-            <label id="cashOutValue">0</label>
+            <label>
+                Cash out value:
+                <label id="cashOutValue">0</label>
+            </label>
             <button id="cashOutButton">Cash out</button>
         </div>
         <script type="text/javascript" src="/static/scripts/minesweeperFrontEnd.js"></script>
