--- a/templates/black_jack/black_jack.html
+++ b/templates/black_jack/black_jack.html
@@ -12,18 +12,14 @@
             {% include "menubar.html" %}
         </header>
         <main>
-            <h1>BlackJack</h1>
-            <br>
+            <h1 id="blackjack">BlackJack</h1>
             <h2>Dealer: <span id="sumDealer"></span></h2>
             <div id="cardsDealer">
                 <img id="hiddenCard" src="/static/images/card_deck_black_jack/back.svg" alt="Backside">
             </div>
-            <br>
             <h2>You: <span id="sumPlayer"></span></h2>
-            <div id="cardsPlayer">
-            </div>
-            <br>
-            <div>
+            <div id="cardsPlayer"></div>
+            <div id="betTool">
                 <label for="betAmount">Bet:</label>
                 <div class="bet-container">
                     <button type="button" class="input-number-button" id="decrementBetBy10">-10</button>
@@ -39,9 +35,7 @@
             <button id="restart">Play Again</button>
             <div id="result"></div>
         </main>
-        <footer>
-
-        </footer>
+        <footer></footer>
     <script type="text/javascript" src="/static/scripts/black_jack.js"></script>
     </body>
 
